docs/api/qiskit/0.33/qiskit.circuit.library.GRY.mdx
---
title: GRY
description: API reference for qiskit.circuit.library.GRY
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.GRY
---

# GRY

<Class id="qiskit.circuit.library.GRY" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/library/generalized_gates/gr.py" signature="GRY(num_qubits, theta)">
  Bases: `qiskit.circuit.library.generalized_gates.gr.GR`

  Global RY gate.

  **Circuit symbol:**

  ```python
       ┌──────────┐
  q_0: ┤0         ├
       │          │
  q_1: ┤1  GRY(ϴ) ├
       │          │
  q_2: ┤2         ├
       └──────────┘
  ```

  The global RY gate is native to atomic systems (ion traps, cold neutrals). The global RY can be applied to multiple qubits simultaneously.

  In the one-qubit case, this is equivalent to an RY(theta) operation, and is thus reduced to the RYGate. The global RY gate is a direct sum of RY operations on all individual qubits.

$$
GRY(\theta) = \exp(-i \sum_{i=1}^{n} Y_i \theta/2)
$$

  **Expanded Circuit:**

  Create a new Global RY (GRY) gate.

  **Parameters**

  *   **num\_qubits** (`int`) – number of qubits.
  *   **theta** (`float`) – rotation angle about y-axis

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.GRY.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[`AncillaQubit`]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.GRY.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.GRY.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.GRY.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the tuples for the circuit’s data.

    Each tuple is in the format `(instruction, qargs, cargs)`, where instruction is an Instruction (or subclass) object, qargs is a list of Qubit objects, and cargs is a list of Clbit objects.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.GRY.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.GRY.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[`ParameterExpression`, `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.GRY.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.GRY.instances" name="instances" attributeValue="= 9" />

  ### metadata

  <Attribute id="qiskit.circuit.library.GRY.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.GRY.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.GRY.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.GRY.num_parameters" name="num_parameters">
    Convenience function to get the number of parameter objects in the circuit.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.GRY.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.GRY.parameters" name="parameters">
    Convenience function to get the parameters defined in the parameter table.

    **Return type**

    `ParameterView`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.GRY.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.GRY.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[`Qubit`]
  </Attribute>
</Class>

